Disable pull-to-refresh on mobile (Fix #20)

--- a/source/styles/chat.css
+++ b/source/styles/chat.css
@@ -30,6 +30,11 @@ html, body, #app {
   height: 100%;
 }
 
+/* Disable pull-to-refresh in Chrome on Android */
+body {
+  overflow-y: hidden;
+}
+
 /* Header */
 .header img {
   float: right;
